# ulfedit

./: CMakeLists.txt  README.md
src/: ColorSettings.cpp  ColorSettings.h  CompositePreview.cpp  CompositePreview.h  GlyphEditor.cpp  GlyphEditor.h  GlyphGrid.cpp  GlyphGrid.h  MainWindow.cpp  MainWindow.h  UlfFont.cpp  UlfFont.h  UndoCommands.cpp  UndoCommands.h  UnicodeInfo.h  UnicodeMapEditor.cpp  UnicodeMapEditor.h  UnicodeNames.cpp  main.cpp
